force-app/main/default/objects/PBS_AAAP_RLP_Regions_Map__c/PBS_AAAP_RLP_Regions_Map__c.object-meta.xml
<CustomObject>
    <label>RLP Regions Map</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>RLP Regions Map Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RLP Regions Map</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>