force-app/main/default/objects/PBS_AAAP_RLP_Regions_Map__c/fields/PBS_AAAP_EXTERNAL_KEY__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_EXTERNAL_KEY__c</fullName>
    <description>Rexternal Combo of Regionand Stae/ or county or City Name</description>
    <externalId>true</externalId>
    <label>PBS_AAAP_EXTERNAL_KEY</label>
    <length>90</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>