force-app/main/default/objects/PBS_AAAP_RLP_Regions_Map__c/fields/PBS_AAAP_Region_Name__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Region_Name__c</fullName>
    <label>RLP Region Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>