force-app/main/default/objects/PBS_AAAP_RLP_Regions_Map__c/fields/PBS_AAAP_RLP_State__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_RLP_State__c</fullName>
    <label>RLP State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>