force-app/main/default/objects/PBS_AAAP_RLP_Regions_Map__c/fields/PBS_AAAP_RLP_State_Abbrevation__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_RLP_State_Abbrevation__c</fullName>
    <label>RLP State Abbrevation</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>