force-app/main/default/objects/PBS_AAAP_RLP_Regions_Map__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PBS_AAAP_Region_Name__c</columns>
    <columns>PBS_AAAP_RLP_State__c</columns>
    <columns>PBS_AAAP_RLP_State_Abbrevation__c</columns>
    <columns>PBS_AAAP_RLP_County__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>